🛠️ :: (#526) builder 패턴 제거